footer & greeting z-index correction

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -7,7 +7,7 @@ footer {
     flex-direction: row;
     height: 6rem;
     background: #2A3647;
-    z-index: 100;
+    z-index: 4;
 
     .row {
         padding: 0 1.5rem;
