--- a/src/app/summary/summary.component.scss
+++ b/src/app/summary/summary.component.scss
@@ -163,7 +163,7 @@
     height: 100vh;
     background: #F6F7F8;
     margin: 0 auto;
-    z-index: 2;
+    z-index: 5;
     opacity: 1;
 
     h2 {
